# tasca-do-vereda

./: AGT_ROADMAP.md  API_DOCUMENTATION.md  ARCHITECTURE_VISUAL.md  AUDIT_REPORT.md  App.tsx  BACKUP_RESTORE.md  CHECKLIST_FINAL.md  COMECE_AQUI.md  COMECE_AQUI.ps1  COMPLETION_CHECKLIST.md  DEPENDENCY_UPDATE_LOG.md  DOCUMENTACAO_BACKUP_RESTAURO.md  DOCUMENTACAO_TECNICA_AGT.md  DOCUMENTACAO_TECNICA_DETALHADA.md  DOCUMENTACAO_TECNICA_REST_AI.md  FILES_REFERENCE.md  FIREBASE_GUIDE.md  FIREBASE_REMOVAL_REPORT.md  GUIA_ELIMINAR_BSOD.txt  GUIA_RAPIDO_FEATURES.md  GUIA_TAURI_COMPLETO.md  IDENTIFICACAO_FUNCIONARIOS_DOCS.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTRUCOES_ICONE.txt  INTEGRATIONS_SETUP_GUIDE.md  MANUAL_CERTIFICACAO_AGT.md  MANUAL_TECNICO_AGT.md  OTIMIZACOES_E_FEATURES.md  QR_CODE_DELIVERY_SUMMARY.md  QR_CODE_FILES_INVENTORY.md  QR_CODE_IMPLEMENTATION.md  QR_CODE_INDEX.md  QR_CODE_INTEGRATION.md  QR_CODE_MENU_DOCS.md  QR_CODE_QUICKSTART.md  QR_CODE_README.md  QR_CODE_START_HERE.txt  QR_CODE_SUMMARY.md  (+46 more)
.cargo/: config.toml
components/: ErrorBoundary.tsx  ExportButton.tsx  POSAccessManagement.tsx  PaymentCorrectionDashboard.tsx  QRCodeDisplay.tsx  QRMenuConfig.tsx  RoleManagementModal.tsx  SQLMigrationPanel.tsx  SalaryCalculatorAngola.tsx  Sidebar.tsx  SmartAlertsPanel.tsx  SmartRecommendations.tsx  TableLayoutEditor.tsx  UserManagementModal.tsx
config/: routes.tsx
src-tauri/: Cargo.toml  tauri-bundler.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+152 files in other folders)
